--- a/public/login-page.html
+++ b/public/login-page.html
@@ -6,7 +6,9 @@
     <title>Login Page with Validation</title>
     <script src="../src/renderer/tailwind.js"></script>
   </head>
-  <body class="bg-gray-100 flex items-center justify-center min-h-screen p-6">
+  <body
+    class="bg-gray-100 flex items-center justify-center min-h-screen p-6 select-none"
+  >
     <div
       x-data="loginForm"
       class="w-full max-w-md bg-white p-8 rounded-lg shadow-md"
