--- a/public/req-page.html
+++ b/public/req-page.html
@@ -6,7 +6,9 @@
     <title>Requirement Page</title>
     <script src="../src/renderer/tailwind.js"></script>
   </head>
-  <body class="bg-gray-100 min-h-screen flex items-center justify-center p-6">
+  <body
+    class="bg-gray-100 min-h-screen flex items-center justify-center p-6 select-none"
+  >
     <div
       x-data="requirementsCheck"
       class="flex flex-col items-center justify-center space-y-4"
